DB schema changes (#20)
* API update

* Added changes to openapi.json
